--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,5 +49,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-firestore:21.3.1'
+    // mutli dex
+
+    implementation 'com.android.support:multidex:1.0.3'
 
 }
