adding fazilet times

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.19.0
   fluttertoast: ^8.1.1
   google_sign_in: ^6.2.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
