--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   fluttertoast: ^8.1.1
   google_sign_in: ^6.2.1
   http: ^1.2.2
+  sign_in_with_apple: ^6.1.2
+  firebase_database: ^11.1.0
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
