--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   sign_in_with_apple: ^6.1.2
   firebase_database: ^11.1.0
   font_awesome_flutter: ^10.7.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
