--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_database: ^11.1.0
   font_awesome_flutter: ^10.7.0
   table_calendar: ^3.1.2
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+      - .env
+      - assets/images/image.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
