--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   table_calendar: ^3.1.2
   flutter_dotenv: ^5.1.0
+  permission_handler: ^11.3.1
+  package_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
