--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   permission_handler: ^11.3.1
   package_info: ^2.0.2
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  intl_utils: ^2.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,6 +82,8 @@ flutter:
   assets:
       - .env
       - assets/images/image.png
+      - lib/l10n/en.json
+      - lib/l10n/tr.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -110,3 +115,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_intl:
+  enabled: true
+  localizations:
+    - lib/l10n
+  arb-dir: lib/l10n
+  output-localization-file: lib/l10n/app_localizations.dart
+  output-class: AppLocalizations
